[gd_scene load_steps=5 format=3 uid="uid://dpyl2w4w8bfur"]

[ext_resource type="LabelSettings" uid="uid://b7hv887cvsyj" path="res://assets/LG_WHITE48.tres" id="1_cixan"]
[ext_resource type="LabelSettings" uid="uid://oedon5cfx0mi" path="res://assets/LG_RED64.tres" id="1_crndo"]
[ext_resource type="Script" path="res://scenes/menu/game_over_ui.gd" id="1_gjtt2"]
[ext_resource type="AudioStream" uid="uid://ctjy7almp12s7" path="res://assets/audio/game_over.wav" id="3_wvdcj"]

[node name="GameOverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gjtt2")

[node name="GameOver" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = -32.0
offset_right = 161.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = ExtResource("1_crndo")

[node name="PressSpace" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -37.5
offset_right = 50.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE
TO
CONTINUE"
label_settings = ExtResource("1_cixan")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceReadyTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_wvdcj")
